--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -1,7 +1,7 @@
-#root {
-  margin: 0 auto;
-  text-align: center;
-}
+// #root {
+//   margin: 0 auto;
+//   text-align: center;
+// }
 
 @keyframes logo-spin {
 }
