--- a/app/src/MainMenu.scss
+++ b/app/src/MainMenu.scss
@@ -16,3 +16,36 @@
     height: 100vh;
 }
 
+.menu-container {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5 );
+    height: 100%;
+    z-index: 4;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 2rem 5vw;
+    height: calc(100% - 4rem);
+
+    &__title {
+        font-size: calc(1rem + 1vw);
+    }
+
+    &__buttons, &__user-display {
+        font-size: calc(.5rem + 1vw);
+    }
+
+    &__buttons {}
+
+    &__user-display {
+
+        &__username {
+            font-style: italic;
+            font-weight: 700;
+        }
+    }
+}
