--- a/app/src/Flower.scss
+++ b/app/src/Flower.scss
@@ -18,7 +18,7 @@
 
     &__bud {
         position: relative;
-        inset: -10vw 1vw;
+        inset: -30vh -3vh;
 
         &__petals {
             position: absolute;
