--- a/app/src/MainMenu.scss
+++ b/app/src/MainMenu.scss
@@ -18,7 +18,7 @@
 
 .menu-container {
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.5 );
+    background-color: rgba(0, 0, 0, 0.5);
     height: 100%;
     z-index: 4;
 }
@@ -26,20 +26,32 @@
 .menu {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 2rem 5vw;
     height: calc(100% - 4rem);
+    border-right: 3px solid #51727F;
+    color: white;
 
     &__title {
         font-size: calc(1rem + 1vw);
+        padding: 2rem;
     }
-
-    &__buttons, &__user-display {
+    
+    &__buttons,
+    &__user-display {
+        padding: 2rem;
         font-size: calc(.5rem + 1vw);
     }
 
-    &__buttons {}
+    &__buttons {
+        width: calc(100% - 4rem);
+        transition: background-color .2s ease;
+
+        &:hover {
+            cursor: pointer;
+            border-right: 3px solid white;
+            box-shadow: -15px 0px 6px 6px rgba(0,0,0,0.1);
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+    }
 
     &__user-display {
 
@@ -48,4 +60,8 @@
             font-weight: 700;
         }
     }
+}
+
+.--logout-button {
+    margin-top: 100%;
 }
