--- a/app/src/canvas.scss
+++ b/app/src/canvas.scss
@@ -54,12 +54,19 @@
 }
 
 .wave-count,
-.lives-display {
+.lives-display,
+.currency-display {
     height: fit-content;
     width: fit-content;
     position: absolute;
     font-weight: 800;
     font-size: xx-large;
     -webkit-text-stroke: 1px black;
-    text-shadow: 0px 0px 10px rgba(255,255,255,0.3);
+    text-shadow: 0px 0px 10px rgba(255,255,255,0.5);
+}
+
+.currency-display {
+    top: 1rem;
+    color: rgb(47, 255, 0);
+    -webkit-text-stroke: 2px black;
 }
