--- a/app/src/MainMenu.scss
+++ b/app/src/MainMenu.scss
@@ -26,7 +26,7 @@
 .menu {
     display: flex;
     flex-direction: column;
-    height: calc(100% - 4rem);
+    height: calc(100% - 6rem);
     border-right: 3px solid #51727F;
     color: white;
 
@@ -63,5 +63,5 @@
 }
 
 .--logout-button {
-    margin-top: 100%;
+    margin-top: calc(100% - 2rem);
 }
