--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -13,12 +13,17 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  font-weight: inherit;
+  color: inherit;
   text-decoration: inherit;
 }
+
 a:hover {
-  color: #535bf2;
+  color: gold;
+}
+
+a:active {
+  color: black;
 }
 
 body {
