--- a/app/src/GamePage.scss
+++ b/app/src/GamePage.scss
@@ -8,7 +8,7 @@
 .game-over {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.85);
-    box-shadow: 0px 0px 20px 375px rgba(0,0,0,0.4);
+    box-shadow: 0px 0px 20px 375px rgba(0, 0, 0, 0.4);
     width: fit-content;
     height: fit-content;
     padding: 4rem;
@@ -24,7 +24,7 @@
         font-size: 4rem;
         font-weight: 800;
     }
-    
+
     &__text {
         font-size: 1rem;
         margin-block: 3rem;
@@ -72,7 +72,26 @@
     width: calc(100% - 6rem);
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: rgba(0, 0, 0, 0.4);
     top: 0;
     padding: 1rem 3rem;
+
+    &__links {
+        display: flex;
+        gap: 1rem;
+
+        &__restart__button {
+            user-select: none;
+            cursor: pointer;
+        }
+
+        &__menu__button {}
+
+        &__menu__button,
+        &__restart__button {
+            width: 2.3rem;
+            transform: translateY(5px);
+        }
+    }
 }
