--- a/app/src/MainMenu.scss
+++ b/app/src/MainMenu.scss
@@ -62,6 +62,8 @@
     }
 }
 
-.--logout-button {
+.--logout-button, .--login-button {
     margin-top: calc(100% - 2rem);
+    position: absolute;
+    bottom: 0;
 }
