--- a/app/src/Register.scss
+++ b/app/src/Register.scss
@@ -1,5 +1,10 @@
+body {
+  overflow: hidden;
+}
+
 .register__background {
   background-color: skyblue;
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -13,6 +18,7 @@
   width: fit-content;
   padding: 3rem;
   border-radius: 16px;
+  position: absolute;
 }
 
 .registerForm {
@@ -20,11 +26,11 @@
   flex-direction: column;
   align-items: start;
   gap: 1rem;
-
+  
   &__title {
     margin-block-end: 2rem;
   }
-
+  
   &__field {
     width: 100%;
     display: flex;
@@ -35,7 +41,6 @@
 
 .registerForm__button,
 .loginForm__button {
-  margin-block: 2rem;
   margin-inline: auto;
   border-radius: 8px;
   border: 1px solid transparent;
@@ -50,4 +55,16 @@
   &:hover {
     color: gold;
   }
+}
+
+.background-bee {
+  position: absolute;
+}
+
+.registerForm__switch-form {
+  margin-block: 2rem;
+}
+
+.error-message {
+  color: red;
 }
