--- a/app/src/MainMenu.scss
+++ b/app/src/MainMenu.scss
@@ -7,11 +7,16 @@
     margin: 0;
 }
 
+.mainMenu-main {
+    position: relative;
+}
+
 .container {
     overflow: hidden;
     background-color: var(--sky-color);
     display: flex;
     align-items: end;
+    justify-content: center;
     width: 100vw;
     height: 100vh;
 }
